tests/errors/fail_can_only_be_used_in_fallible_functions.n
// Error test: fail in non-fallible function

fn bad() -> int {
    fail "oops";
}

fn main() {
}
